--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,14 +1,24 @@
+@font-face {
+  font-family: title-stay;
+  src: url(../../public/font/Stay\ Casual.otf);
+}
+
 :root {
+
   --color: rgba(255, 255, 255, 0.87);
   --bg: #242424;
 
-  color-scheme: light dark;
+  --h-logo: 80px;
+  --font: title-stay;
+  /* color-scheme: light dark; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
+
 
 a {
   color: #646cff;
@@ -19,19 +29,18 @@ a:hover {
   color: #535bf2;
 }
 
+*,
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  min-width: 200px;
-  min-height: 100vh;
 }
 
-
-
-
-
-
+body {
+  min-width: 0px;
+  min-height: 100vh;
+  background-color: var(--bg);
+}
 
 
 
