--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,6 +1,37 @@
 .navbar-menu {
+    /* height: var(--); */
     background-color: var(--bg);
     padding: 20px 25px;
     border-bottom: solid 1px #ffe;
     box-shadow: 0 0 8px #ffe;
+    display: grid;
+    grid-template-columns: repeat(5, minmax(2px, 1fr));
+    justify-items: center;
+
+}
+
+.navbar-item {
+    display: flex;
+    align-items: center;
+    min-width: 2rem;
+    max-width: 9.5rem;
+    height: var(--h-logo);
+}
+
+.a-item {
+    text-align: center;
+    height: 40%;
+    font-size: 23px;
+    padding: 0 10px;
+    position: relative;
+}
+
+.a-item:hover .txt-item::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    bottom: -5px;
+    left: 0px;
+    background-color: #ffe;
 }
