--- a/src/css/logo.css
+++ b/src/css/logo.css
@@ -14,7 +14,7 @@
     text-align: center;
     width: 70%;
     height: var(--h-logo);
-    font-family: var(--font);
+    font-family: var(--f);
     font-size: 28px;
     font-weight: 800;
     filter: brightness(1.2);
