--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -19,9 +19,11 @@
 }
 
 .a-item {
+    font-family: var(--f-normal);
     text-align: center;
     height: 40%;
-    font-size: 23px;
+    font-size: 33px;
+    letter-spacing: 1.5px;
     padding: 0 10px;
     position: relative;
 }
