--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: title-stay;
-  src: url(../../public/font/Stay\ Casual.otf);
+  src: url(../../public/font/Kenlan.ttf);
 }
 
 
 
 @font-face {
   font-family: normal-stay;
-  src: url(../../public/font/Wheel.otf);
+  src: url(../../public/font/Scintilla.otf);
 }
 
 
