--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,7 +14,8 @@
 
 :root {
 
-  --color: rgba(255, 255, 255, 0.87);
+  --color: rgb(255, 255, 255);
+  --color-a: rgba(255, 253, 241, 0.89);
   --bg: #242424;
 
   --h-logo: 70px;
@@ -31,12 +32,12 @@
 
 
 a {
-  color: #646cff;
+  color: #fff;
   text-decoration: inherit;
 }
 
 a:hover {
-  color: #535bf2;
+  color: var(--color-a);
 }
 
 *,
