--- a/src/css/logo.css
+++ b/src/css/logo.css
@@ -30,3 +30,29 @@
     background-clip: text;
     color: transparent;
 }
+
+@media (width <=380px) {
+    .navbar-menu {
+        grid-template-columns: 120px repeat(2, minmax(10px, 140px));
+    }
+
+    .logo-container {
+        min-width: 100%;
+    }
+
+    .img-container {
+        background-position: 118%;
+        width: 100%;
+        height: 100%;
+    }
+
+    .bg-txt-logo {
+        display: flex;
+        align-items: center;
+        position: relative;
+        left: -5px;
+        width: 100px;
+        font-size: 21px;
+        height: 100%;
+    }
+}
