--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -24,6 +24,7 @@
     grid-row: 2/4;
 }
 
+/* items a de la navegacion */
 .navbar-item .a-item {
     font-family: var(--f-normal);
     text-align: center;
@@ -34,15 +35,15 @@
     color: var(--color);
 }
 
-
-
-.navbar-item .a-item:hover .txt-item {
-    color: var(--color-a);
-}
-
 .txt-item::before {
     content: "";
     transition: all .3s ease-in-out;
+}
+
+/* items a de la navegacion en hover */
+
+.navbar-item .a-item:hover .txt-item {
+    color: var(--color-a);
 }
 
 .navbar-item .a-item:hover .txt-item::before {
@@ -56,6 +57,7 @@
     transition: all .2s ease-in-out;
 }
 
+/* poniendo en orden de columnas de los items de la navegacion */
 .navbar-item:nth-child(5) {
     grid-column: 5;
 }
