--- a/src/css/bloqueImg.css
+++ b/src/css/bloqueImg.css
@@ -2,7 +2,7 @@
     display: inline-block;
     width: 100%;
     min-height: 100vh;
-    background-color: antiquewhite;
+    background-color: var(--bg);
 }
 
 .img-fondo {
