--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -4,15 +4,15 @@
 
 /* bg del menu */
 .navbar-menu {
-    justify-content: center;
-    background-color: var(--bg);
-    padding: 10px 25px;
-    border-bottom: solid 2px #ffe;
-    box-shadow: 0 0 8px #ffe;
     display: grid;
-    grid-template-columns: repeat(5, minmax(10px, 240px));
-    grid-template-rows: 40px repeat(2, 23.3px);
+    justify-content: center;
     justify-items: center;
+    grid-template-columns: repeat(6, minmax(10px, 240px));
+    grid-template-rows: 40px repeat(2, 23.3px);
+    padding: 10px 25px;
+    /* box-shadow: 0 10px 58px rgb(0, 0, 0); */
+    border-bottom: var(--border);
+    background: var(--bg);
 }
 
 /* enlaces de navegacion*/
@@ -20,8 +20,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
     grid-row: 2/4;
+    width: 100%;
+
+    /* poniendo en orden de columnas de los items de la navegacion */
+    &:nth-child(5) {
+        grid-column: 5;
+    }
 }
 
 /* items a de la navegacion */
@@ -32,36 +37,34 @@
     height: 50%;
     padding: 0 10px;
     position: relative;
-    color: var(--color);
-}
-
-.txt-item::before {
-    content: "";
-    transition: all .3s ease-in-out;
-}
-
-/* items a de la navegacion en hover */
-
-.navbar-item .a-item:hover .txt-item {
     color: var(--color-a);
+
+    /* items a de la navegacion en hover */
+    &:hover {
+        filter: brightness(1.2);
+
+        &::before {
+            content: "";
+            filter: brightness(1.2);
+        }
+    }
+
 }
 
-.navbar-item .a-item:hover .txt-item::before,
-.navbar-item .a-item.Home.active .txt-item::before {
+.navbar-item .a-item:hover::before,
+.navbar-item .a-item.Home.active::before {
     position: absolute;
     content: "";
     width: 100%;
-    height: 3px;
+    height: 2px;
     bottom: -1px;
     left: 0px;
     background-color: var(--color-a);
-    transition: all .2s ease-in-out;
 }
 
-/* poniendo en orden de columnas de los items de la navegacion */
-.navbar-item:nth-child(5) {
-    grid-column: 5;
-}
+/* .navbar-item .a-item .txt-item {} */
+
+
 
 /* botones de navegacion */
 .NB-top-msg-container,
@@ -74,52 +77,58 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    grid-column: 4/6;
+    grid-column: 5/7;
     grid-row: 1/2;
-    gap: 10px;
+    gap: 15%;
+}
+
+/* hover */
+.NB-top-item {
+    &:hover {
+        cursor: pointer;
+        filter: brightness(1.4);
+        transition: all .1s ease-in-out;
+    }
 }
 
 /* bg iconos top */
-.NB-top-item.msg,
-.NB-top-item.bell {
+.NB-top-item {
     padding: 3px 0;
     width: 45px;
     height: 35px;
     display: flex;
-    background-color: var(--color-a);
-    border-radius: 7px;
-    border: 0.5px solid #000000a6;
-    box-shadow: 0px 0px 2px var(--color-a);
+    background-color: var(--color);
+    border-radius: 5px;
+    border: var(--border);
+    box-shadow: 0px 0px 2px var(--color);
+
+    /* transitiones... */
+    &::before {
+        transition: all 3ms ease-in-out;
+    }
 }
 
-/* transitiones... */
-.NB-top-item.msg::before,
-.NB-top-item.bell::before {
-    transition: all 3ms ease-in-out;
+
+/* bg imagenes bell*/
+.NB-top-item.bell {
+    &::before {
+        content: "";
+        width: 100%;
+        background: url(../../public/svg/bell.svg) 45% no-repeat;
+        background-size: var(--bg-size);
+    }
 }
 
-/* bg imagenes */
-.NB-top-item.bell::before {
-    content: "";
-    width: 100%;
-    background: url(../../public/svg/bell.svg) 45% no-repeat;
-    background-size: var(--bg-size);
+/* bg imagenes msg*/
+.NB-top-item.msg {
+    &::before {
+        content: "";
+        width: 100%;
+        background: url(../../public/svg/contact.svg) 45% no-repeat;
+        background-size: var(--bg-size);
+    }
 }
 
-/* bg imagenes */
-.NB-top-item.msg::before {
-    content: "";
-    width: 100%;
-    background: url(../../public/svg/contact.svg) 45% no-repeat;
-    background-size: var(--bg-size);
-}
-
-/* hover */
-.NB-top-item:hover {
-    cursor: pointer;
-    filter: brightness(1.4);
-    transition: all .1s ease-in-out;
-}
 
 /* estilos de el btn cerrado */
 .NB-top-open-msg.close,
@@ -135,28 +144,43 @@
 .NB-top-open-bell.open {
     position: absolute;
     left: -70%;
-    display: block;
+    display: flex;
+    /* flex-direction: row-reverse; */
+    /* align-items: start; */
     width: calc(var(--bg-size)*4);
     height: calc(var(--bg-size)*4);
-    background: var(--color);
+    border: 1px solid var(--color-a);
+    border-radius: 3px;
+    background: var(--bg);
 }
+
+.NB-top-open-bell.open .btn-msg-close {}
 
 /* enlaces de navegacion responsive. */
 
-@media(width < 1250px) {
+@media(width < 1150px) {
     .navbar-menu {
         grid-template-columns: repeat(4, minmax(10px, 240px));
     }
 
-    .navbar-item:nth-last-child(2) {
-        display: none;
+    .navbar-item {
+        &:nth-last-child(3) {
+            display: none;
+        }
     }
 }
 
 @media (width<1000px) {
 
-    .navbar-item:nth-last-child(3) {
-        display: none;
+    .navbar-item {
+        &:nth-last-child(4) {
+            display: none;
+        }
+
+        &:nth-last-child(5)::after {
+            background: aqua;
+            content: "...";
+        }
     }
 
     .navbar-menu {
@@ -166,10 +190,10 @@
 }
 
 
-/* botones de navegacion */
+/*posicion botones de navegacion */
 
 
-@media (width <=380px) {
+@media (width <=480px) {
     .NB-top-container {
         grid-area: 1/3;
     }
@@ -184,4 +208,13 @@
     .NB-top-item.bell::before {
         background-size: calc(var(--bg-size)*.85);
     }
+
+    @media (width <=380px) {
+        .navbar-item {
+            display: none;
+        }
+    }
+
+
+
 }
