--- a/src/css/logo.css
+++ b/src/css/logo.css
@@ -16,13 +16,11 @@
     user-select: none;
 }
 
-.bg-txt {
-    height: 100%;
-    width: 100%;
-}
-
 .logo-txt {
-    width: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    /* width: 130px; */
     height: 100%;
     font-size: 1.9rem;
     text-align: center;
@@ -45,22 +43,23 @@
     }
 
     .img-container {
-        background-position: 118%;
         width: 100%;
         height: 100%;
+        background-position: 105% 65%;
+        background-size: 55px;
     }
 
-    .bg-txt-logo {
-        display: flex;
-        align-items: center;
+
+    .logo-txt {
+        font-size: 19px;
+        width: 80px;
+        height: auto;
         position: relative;
-        left: -5px;
-        width: 100px;
-        font-size: 21px;
-        height: 100%;
+        top: 8px;
     }
 
-    .txt-item {
-        font-size: 17px;
+    .navbar-item .a-item {
+        font-size: 15px;
     }
+
 }
