--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -160,12 +160,12 @@
 
 @media(width < 1150px) {
     .navbar-menu {
-        grid-template-columns: repeat(4, minmax(10px, 240px));
+        grid-template-columns: 240px repeat(5, minmax(10px, 240px));
     }
 
     .navbar-item {
         &:nth-last-child(3) {
-            display: none;
+            /* display: none; */
         }
     }
 }
@@ -174,7 +174,7 @@
 
     .navbar-item {
         &:nth-last-child(4) {
-            display: none;
+            /* display: none; */
         }
 
         &:nth-last-child(5)::after {
@@ -184,7 +184,7 @@
     }
 
     .navbar-menu {
-        grid-template-columns: repeat(3, minmax(10px, 240px));
+        grid-template-columns: 200px repeat(4, minmax(10px, 140px));
     }
 
 }
@@ -194,13 +194,17 @@
 
 
 @media (width <=480px) {
+    .navbar-menu {
+        grid-template-columns: 120px repeat(3, minmax(10px, 140px));
+    }
+
     .NB-top-container {
-        grid-area: 1/3;
+        grid-area: 1/4;
     }
 
     .NB-top-item {
         padding: 0;
-        width: 35px;
+        width: 55px;
         height: 30px;
     }
 
