--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,11 +1,10 @@
 :root {
-    --bg-size: 28px;
+    --bg-size: 24px;
 }
 
 /* bg del menu */
 .navbar-menu {
     display: grid;
-    justify-content: center;
     justify-items: center;
     grid-template-columns: repeat(6, minmax(10px, 240px));
     grid-template-rows: 40px repeat(2, 23.3px);
@@ -18,10 +17,11 @@
 /* enlaces de navegacion*/
 .navbar-item {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     grid-row: 2/4;
     width: 100%;
+    height: 90%;
 
     /* poniendo en orden de columnas de los items de la navegacion */
     &:nth-child(5) {
@@ -52,7 +52,7 @@
 }
 
 .navbar-item .a-item:hover::before,
-.navbar-item .a-item.Home.active::before {
+.navbar-item .a-item.on::before {
     position: absolute;
     content: "";
     width: 100%;
@@ -62,17 +62,10 @@
     background-color: var(--color-a);
 }
 
-/* .navbar-item .a-item .txt-item {} */
-
-
 
 /* botones de navegacion */
-.NB-top-msg-container,
-.NB-top-bell-container {
-    position: relative;
-}
 
-.NB-top-container {
+.NB-top-container-tops {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -82,20 +75,16 @@
     gap: 15%;
 }
 
-/* hover */
-.NB-top-item {
-    &:hover {
-        cursor: pointer;
-        filter: brightness(1.4);
-        transition: all .1s ease-in-out;
-    }
+.NB-top-container {
+    position: relative;
 }
+
 
 /* bg iconos top */
 .NB-top-item {
     padding: 3px 0;
     width: 45px;
-    height: 35px;
+    height: 32px;
     display: flex;
     background-color: var(--color);
     border-radius: 5px;
@@ -106,8 +95,47 @@
     &::before {
         transition: all 3ms ease-in-out;
     }
+
+    /* hovers */
+    &:hover {
+        cursor: pointer;
+        filter: brightness(1.4);
+        transition: all .1s ease-in-out;
+
+        +.NB-top-open {
+            position: absolute;
+            left: -70%;
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: start;
+            width: calc(var(--bg-size)*4);
+            height: calc(var(--bg-size)*4);
+            border: 1px solid var(--color-a);
+            border-radius: 3px;
+            background: var(--bg);
+        }
+    }
 }
 
+/* estilos de el btn abierto*/
+
+.NB-top-open {
+    position: absolute;
+    left: -70%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: start;
+    width: calc(var(--bg-size)*4);
+    height: calc(var(--bg-size)*4);
+    border: 1px solid var(--color-a);
+    border-radius: 3px;
+    background: var(--bg);
+}
+
+/* estilos de el btn cerrado */
+.NB-top-open.closed {
+    display: none;
+}
 
 /* bg imagenes bell*/
 .NB-top-item.bell {
@@ -130,32 +158,6 @@
 }
 
 
-/* estilos de el btn cerrado */
-.NB-top-open-msg.close,
-.NB-top-open-bell.close {
-    display: none;
-    width: 20px;
-    height: 20px;
-}
-
-/* estilos de el btn abierto*/
-
-.NB-top-open-msg.open,
-.NB-top-open-bell.open {
-    position: absolute;
-    left: -70%;
-    display: flex;
-    /* flex-direction: row-reverse; */
-    /* align-items: start; */
-    width: calc(var(--bg-size)*4);
-    height: calc(var(--bg-size)*4);
-    border: 1px solid var(--color-a);
-    border-radius: 3px;
-    background: var(--bg);
-}
-
-.NB-top-open-bell.open .btn-msg-close {}
-
 /* enlaces de navegacion responsive. */
 
 @media(width < 1150px) {
@@ -173,9 +175,7 @@
 @media (width<1000px) {
 
     .navbar-item {
-        &:nth-last-child(4) {
-            /* display: none; */
-        }
+        &:nth-last-child(4) {}
 
         &:nth-last-child(5)::after {
             background: aqua;
