--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -35,7 +35,6 @@
     font-size: calc(var(--bg-size)*.7);
     text-align: center;
     height: 50%;
-    padding: 0 10px;
     position: relative;
     color: var(--color-a);
 
@@ -48,6 +47,11 @@
             filter: brightness(1.2);
         }
     }
+
+}
+
+.txt-item {
+    padding: 0 10px;
 
 }
 
@@ -66,6 +70,7 @@
 /* botones de navegacion */
 
 .NB-top-container-tops {
+    z-index: 10;
     display: flex;
     width: 100%;
     justify-content: center;
@@ -77,6 +82,7 @@
 
 .NB-top-container {
     position: relative;
+
 }
 
 
@@ -90,6 +96,7 @@
     border-radius: 5px;
     border: var(--border);
     box-shadow: 0px 0px 2px var(--color);
+
 
     /* transitiones... */
     &::before {
