--- a/src/css/index.css
+++ b/src/css/index.css
@@ -49,6 +49,7 @@ body {
 
 body {
   min-width: 0px;
+  max-width: 100vw;
   min-height: 100vh;
   background-color: var(--bg);
   overflow-x: hidden;
