--- a/src/css/index.css
+++ b/src/css/index.css
@@ -48,8 +48,7 @@ body {
 }
 
 body {
-  min-width: 0px;
-  max-width: 100vw;
+  min-width: 100vw;
   min-height: 100vh;
   background-color: var(--bg);
   overflow-x: hidden;
