--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -15,11 +15,18 @@
     &:not(:checked)~.subContenedor {
         width: 0;
         height: 100vh;
+        visibility: hidden;
     }
 
     &:not(:checked)~.subContenedor .carrito {
         padding: 0;
+    }
 
+    &:not(:checked)~.subContenedor .carrito .encabezado-car,
+    &:not(:checked)~.subContenedor .carrito .cuerpo-car,
+    &:not(:checked)~.subContenedor .carrito .footer-car {
+
+        display: none;
     }
 }
 
