--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,8 +14,8 @@
 :root {
 
   --color-a: #263159;
-  --color: #495579;
-  --bg: #FFFBEB;
+  --color: #682200;
+  --bg: #E8E5C8;
 
   --h-logo: 70px;
   --f: title-stay;
