--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -24,6 +24,12 @@
     }
 }
 
+.chh {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+}
+
 .carrito {
     min-height: 100%;
     padding: 5px;
