--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -21,15 +21,46 @@
     justify-content: center;
     grid-row: 2/4;
     width: 100%;
-    height: 90%;
 
     /* poniendo en orden de columnas de los items de la navegacion */
-    &:nth-child(5) {
-        grid-column: 5;
+    &:nth-child(6) {
+        height: 150%;
+        width: 35%;
+        grid-row: 2/3;
+        border: 1px solid var(--color);
+        border-radius: 45px 45px;
     }
 }
 
 /* items a de la navegacion */
+.navbar-item .a-item.🛒 {
+    transform: rotateY(180deg);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    font-family: 'san-sherif';
+
+    &:hover::before {
+        content: "(1)";
+    }
+
+    &::before {
+        content: "(0)";
+        height: 15px;
+        position: absolute;
+        left: 5px;
+        display: block;
+        transform: rotateY(180deg);
+        z-index: -1;
+    }
+}
+
+.navbar-item .a-item.🛒:hover::after {
+    content: "";
+    visibility: hidden;
+}
+
 .navbar-item .a-item {
     font-family: var(--f-normal);
     font-size: calc(var(--bg-size)*.7);
@@ -40,22 +71,17 @@
 
     /* items a de la navegacion en hover */
     &:hover {
-        filter: brightness(1.2);
+        filter: brightness(1.4);
 
         &::before {
             content: "";
-            filter: brightness(1.2);
+            /* filter: brightness(1.2); */
         }
     }
 
 }
 
-.txt-item {
-    padding: 0 10px;
-
-}
-
-.navbar-item .a-item:hover::before,
+.navbar-item .a-item:hover::after,
 .navbar-item .a-item.on::before {
     position: absolute;
     content: "";
@@ -66,6 +92,11 @@
     background-color: var(--color-a);
 }
 
+.txt-item {
+    padding: 0 10px;
+    position: relative;
+
+}
 
 /* botones de navegacion */
 
@@ -73,9 +104,9 @@
     z-index: 10;
     display: flex;
     width: 100%;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    grid-column: 5/7;
+    grid-column: 4/6;
     grid-row: 1/2;
     gap: 15%;
 }
@@ -85,16 +116,15 @@
 
 }
 
-
 /* bg iconos top */
 .NB-top-item {
     padding: 3px 0;
-    width: 45px;
-    height: 32px;
+    width: 50px;
+    height: 36px;
     display: flex;
-    background-color: var(--color);
-    border-radius: 5px;
-    border: var(--border);
+    /* background-color: var(--color); */
+    border-radius: 45px 42px;
+    border: 1px solid var(--color);
     box-shadow: 0px 0px 2px var(--color);
 
 
