--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -24,6 +24,17 @@
 }
 
 /* items a de la navegacion carro */
+.navbar-item {
+    &:nth-child(7) {
+        height: 160%;
+        width: 35%;
+        grid-row: 2/3;
+        grid-column: 6/7;
+        border: 1px solid var(--color);
+        border-radius: 45px 45px;
+    }
+}
+
 .navbar-item .a-item.🛒 {
     display: flex;
     flex-direction: row-reverse;
@@ -55,10 +66,6 @@
     content: "";
     visibility: hidden;
 }
-
-
-
-
 
 .subContenedor {
     z-index: 20;
