--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -4,13 +4,13 @@
     &:not(:checked)~.subContenedor {
         width: 0;
         height: 100vh;
-        visibility: hidden;
+        /* visibility: hidden; */
+        transition: width .3s ease;
     }
 
-    &:not(:checked)~.subContenedor .carrito {
-        padding: 0;
-        display: none;
-    }
+    /* &:not(:checked)~.subContenedor .carrito {
+
+    } */
 }
 
 .chh {
@@ -26,7 +26,7 @@
 /* items a de la navegacion carro */
 .navbar-item {
     &:nth-child(7) {
-        height: 160%;
+        height: 130%;
         width: 35%;
         grid-row: 2/3;
         grid-column: 6/7;
@@ -41,9 +41,9 @@
     height: 100%;
     width: 100%;
     background: url(../../public/svg/cart.svg) no-repeat 30% 50%;
-    background-size: 50% 80%;
+    background-size: 50% 65%;
     align-items: center;
-    font-family: 'san-sherif';
+    font-family: var(--f-normal);
     transform: rotateY(0deg);
 
     &:hover::before {
@@ -55,7 +55,8 @@
         position: absolute;
         display: block;
         height: 15px;
-        right: 5px;
+        right: 10px;
+        top: 17px;
         transform: rotateY(180deg);
         z-index: -1;
     }
@@ -75,7 +76,7 @@
     display: block;
     width: 300px;
     height: 100vh;
-    transition: height 0s, all .4s ease;
+    transition: height 0s, all .6s ease;
 }
 
 .carrito {
