--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -2,15 +2,25 @@
     display: none;
 
     &:not(:checked)~.subContenedor {
-        width: 0;
+        /* width: 300px; */
         height: 100vh;
-        /* visibility: hidden; */
-        transition: width .3s ease;
+        z-index: -1;
+
     }
 
-    /* &:not(:checked)~.subContenedor .carrito {
+    &:not(:checked)~.subContenedor .carrito {
+        width: 0;
+        padding: 0;
+        height: 100vh;
+        transition: width .9s ease;
+    }
 
-    } */
+    &:not(:checked)~.subContenedor .carrito .encabezado-car,
+    &:not(:checked)~.subContenedor .carrito .cuerpo-car,
+    &:not(:checked)~.subContenedor .carrito .footer-car {
+        display: none;
+    }
+
 }
 
 .chh {
@@ -76,19 +86,21 @@
     display: block;
     width: 300px;
     height: 100vh;
-    transition: height 0s, all .6s ease;
+
 }
 
 .carrito {
-    min-height: 100%;
+    height: 100%;
+    width: 100%;
     padding: 5px;
     text-wrap: nowrap;
     background-color: var(--color);
     color: var(--bg);
+    transition: width .6s ease;
+
 }
 
 .btn-close-carro {
-    /* background-color: var(--bg); */
     width: 100%;
 }
 
