--- a/src/css/busqueda.css
+++ b/src/css/busqueda.css
@@ -15,14 +15,15 @@ form {
     height: 100%;
     width: 100%;
     display: flex;
-    align-items: center;
     border: 1px solid var(--color);
     border-radius: 20px 20px;
-    padding: 10px 15px;
+    padding: 5px 5px;
 
 }
 
 .i-txt {
+    position: relative;
+    top: .5px;
     height: 100%;
     width: 88%;
     background-color: transparent;
@@ -33,7 +34,6 @@ form {
     &::selection,
     &:focus,
     &:active {
-
         outline: 0;
     }
 
@@ -50,7 +50,7 @@ form {
     width: 12%;
     height: 100%;
     background: url(../../public/svg/lupa.png) no-repeat;
-    background-size: 80% 95%;
+    background-size: 80% 80%;
     border: 0;
 
     &:hover {
