--- a/src/css/index.css
+++ b/src/css/index.css
@@ -51,7 +51,7 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   background-color: var(--bg);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 
