arreglar auto ajuste de la input.

--- a/src/css/logo.css
+++ b/src/css/logo.css
@@ -10,10 +10,10 @@
 .img-container {
     display: flex;
     align-items: center;
-    background: url(/public/svg/dress.svg) 100% 10px no-repeat;
+    background: url(/public/svg/dress.svg) 85% 45% no-repeat;
     background-size: 60px;
     height: 75%;
-    width: 80%;
+    width: 100%;
     -webkit-user-select: none;
     user-select: none;
 }
