--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -2,25 +2,14 @@
     display: none;
 
     &:not(:checked)~.subContenedor {
-        /* width: 300px; */
-        height: 100vh;
-        z-index: -1;
-
+        visibility: collapse;
+        height: 100%;
+        width: 10%;
+        opacity: .1;
+        background-color: var(--color);
+        color: var(--bg);
+        transition: all .4s, opacity .2s ease 010ms, visibility 210ms ease;
     }
-
-    &:not(:checked)~.subContenedor .carrito {
-        width: 0;
-        padding: 0;
-        height: 100vh;
-        transition: width .9s ease;
-    }
-
-    &:not(:checked)~.subContenedor .carrito .encabezado-car,
-    &:not(:checked)~.subContenedor .carrito .cuerpo-car,
-    &:not(:checked)~.subContenedor .carrito .footer-car {
-        display: none;
-    }
-
 }
 
 .chh {
@@ -48,11 +37,12 @@
 .navbar-item .a-item.🛒 {
     display: flex;
     flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
     height: 100%;
     width: 100%;
-    background: url(../../public/svg/cart.svg) no-repeat 30% 50%;
-    background-size: 50% 65%;
-    align-items: center;
+    background: url(../../public/svg/cart.svg) no-repeat 15% 60%;
+    background-size: 50% 60%;
     font-family: var(--f-normal);
     transform: rotateY(0deg);
 
@@ -61,47 +51,48 @@
     }
 
     &::before {
-        content: "(0)";
-        position: absolute;
+        content: "(var count)";
+        position: relative;
         display: block;
         height: 15px;
-        right: 10px;
-        top: 17px;
-        transform: rotateY(180deg);
+        top: 7px;
         z-index: -1;
+        padding: 10px;
     }
 }
 
 /* quita el on de la navegation. */
 .navbar-item .a-item.🛒:hover::after {
+    z-index: 10;
     content: "";
     visibility: hidden;
 }
 
 .subContenedor {
-    z-index: 20;
+    visibility: visible;
     position: absolute;
-    right: 0pc;
-    top: 0pc;
-    display: block;
-    width: 300px;
+    opacity: 1;
+    z-index: 20;
+    top: 0;
+    right: 0;
     height: 100vh;
-
-}
-
-.carrito {
-    height: 100%;
-    width: 100%;
+    width: 40%;
     padding: 5px;
-    text-wrap: nowrap;
+    text-wrap: pretty;
     background-color: var(--color);
     color: var(--bg);
-    transition: width .6s ease;
-
+    text-wrap: nowrap;
+    transition: width .4s ease-in-out, visibility .0s, opacity 420ms;
 }
+
+
 
 .btn-close-carro {
     width: 100%;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .lb-close {
@@ -121,7 +112,7 @@
     display: flex;
     flex-direction: column;
 
-    &:nth-child(2) {
+    &:nth-child(1) {
         border-top: 1px solid #ccc;
     }
 }
@@ -132,5 +123,22 @@
 
     button {
         flex: 1 1 auto;
+    }
+}
+
+@media (width <=600px) {
+    .carrito {
+        display: flex;
+        flex-direction: column;
+        gap: 20%;
+        height: 100%;
+    }
+
+    .cuerpo-car {
+        text-wrap: pretty;
+    }
+
+    .footer-car {
+        flex-direction: column;
     }
 }
