--- a/src/css/busqueda.css
+++ b/src/css/busqueda.css
@@ -1,6 +1,7 @@
 .navbar-item.busqueda {
+    z-index: 10;
     grid-row: 1/2;
-    grid-column: 2/4;
+    grid-column: 2/5;
     height: 100%;
     width: 100%;
 }
@@ -14,22 +15,25 @@ form {
 .lb-busqueda {
     height: 100%;
     width: 100%;
-    display: flex;
     border: 1px solid var(--color);
     border-radius: 20px 20px;
-    padding: 5px 5px;
-
+    padding: 5px 5px 5px 10px;
+    display: flex;
 }
 
+
+/* arreglar auto ajuste de la input. */
 .i-txt {
     position: relative;
-    top: .5px;
+    top: 1px;
     height: 100%;
-    width: 88%;
+    width: 100%;
+    flex: 1 1 90%;
+    text-align: center;
     background-color: transparent;
     border: 0;
     font-family: var(--f-normal);
-    letter-spacing: .6px;
+    font-size: 16px;
 
     &::selection,
     &:focus,
@@ -39,7 +43,7 @@ form {
 
     &::placeholder {
         color: var(--color-a);
-        font-size: 14.5px;
+        font-size: 16px;
     }
 }
 
@@ -47,13 +51,32 @@ form {
 
 .btn-label-txt {
     display: inline-block;
-    width: 12%;
+    width: 100%;
     height: 100%;
-    background: url(../../public/svg/lupa.png) no-repeat;
+    flex: 1 1 10%;
+    background: url(../../public/svg/lupa.png) no-repeat 0 2px;
     background-size: 80% 80%;
     border: 0;
 
     &:hover {
         cursor: pointer;
+    }
+}
+
+@media (width <=930px) {
+    .i-txt {
+
+
+        flex: 1 1 80%;
+
+        &::placeholder {
+            font-size: 14px;
+        }
+    }
+
+    .btn-label-txt {
+        flex: 1 1 20%;
+        background-size: 40% 60%;
+        background-position: 15px 7px;
     }
 }
