--- a/src/css/index.css
+++ b/src/css/index.css
@@ -48,7 +48,7 @@ body {
 }
 
 body {
-  min-width: 100vw;
+  min-width: 430px;
   min-height: 100vh;
   background-color: var(--bg);
   overflow-x: hidden;
