--- a/src/css/index.css
+++ b/src/css/index.css
@@ -48,10 +48,10 @@ body {
 }
 
 body {
-  min-width: 300px;
-  min-height: 100vh;
+  min-width: 100vw;
+  /* min-height: 100vh; */
   background-color: var(--bg);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 
