--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -1,39 +1,13 @@
-#ch {
-    display: none;
-
-    &:not(:checked)~.subContenedor {
-        visibility: collapse;
-        height: 100%;
-        width: 10%;
-        opacity: .1;
-        background-color: var(--color);
-        color: var(--bg);
-        transition: all .4s, opacity .2s ease 010ms, visibility 210ms ease;
-    }
+.navbar-item.carro {
+    height: 130%;
+    width: 35%;
+    grid-row: 2/3;
+    grid-column: 6/7;
+    border: 1px solid var(--color);
+    border-radius: 45px 45px;
 }
 
-.chh {
-    height: 100%;
-    width: 100%;
-    border-radius: 40%;
-
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-/* items a de la navegacion carro */
-.navbar-item {
-    &:nth-child(7) {
-        height: 130%;
-        width: 35%;
-        grid-row: 2/3;
-        grid-column: 6/7;
-        border: 1px solid var(--color);
-        border-radius: 45px 45px;
-    }
-}
-
+/* label contenedor carro */
 .navbar-item .a-item.🛒 {
     display: flex;
     flex-direction: row-reverse;
@@ -45,19 +19,10 @@
     background-size: 50% 60%;
     font-family: var(--f-normal);
     transform: rotateY(0deg);
+    z-index: 10;
 
-    &:hover::before {
-        content: "(0)";
-    }
-
-    &::before {
-        content: "(var count)";
-        position: relative;
-        display: block;
-        height: 15px;
-        top: 7px;
-        z-index: -1;
-        padding: 10px;
+    &:hover {
+        cursor: pointer;
     }
 }
 
@@ -68,77 +33,51 @@
     visibility: hidden;
 }
 
-.subContenedor {
-    visibility: visible;
-    position: absolute;
-    opacity: 1;
-    z-index: 20;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 40%;
-    padding: 5px;
-    text-wrap: pretty;
-    background-color: var(--color);
-    color: var(--bg);
-    text-wrap: nowrap;
-    transition: width .4s ease-in-out, visibility .0s, opacity 420ms;
-}
+/* items de carro abierto */
+#carro {
+    display: none;
 
-
-
-.btn-close-carro {
-    width: 100%;
-
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-.lb-close {
-    display: inline-block;
-    width: auto;
-}
-
-.encabezado-car {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 2px;
-}
-
-.cuerpo-car {
-    display: flex;
-    flex-direction: column;
-
-    &:nth-child(1) {
-        border-top: 1px solid #ccc;
-    }
-}
-
-.footer-car {
-    display: flex;
-    gap: 4px;
-
-    button {
-        flex: 1 1 auto;
-    }
-}
-
-@media (width <=600px) {
-    .carrito {
-        display: flex;
-        flex-direction: column;
-        gap: 20%;
+    &:checked~.carro-abrir {
+        width: 30%;
         height: 100%;
+        transition: all .6s ease-in;
     }
 
-    .cuerpo-car {
-        text-wrap: pretty;
+    &:checked~.carro-abrir .c-hijo {
+        animation: verSlide .7s both;
     }
 
-    .footer-car {
-        flex-direction: column;
+    &:not(:checked)~.carro-abrir .c-hijo {
+        display: none;
+    }
+}
+
+.carro-abrir {
+    position: absolute;
+    width: 0px;
+    right: 0;
+    top: 0;
+    background: var(--color);
+    height: 100px;
+    transition: all .3s ease-in;
+    z-index: 20;
+}
+
+
+.carro-abrir .c-padre {
+    /* width: 100%; */
+    /* height: 10%; */
+    /* background-color: aqua; */
+}
+
+@keyframes verSlide {
+
+    0%,
+    60% {
+        display: none;
+    }
+
+    100% {
+        display: flex;
     }
 }
