--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -60,6 +60,7 @@
     height: 100%;
     background: var(--color);
     height: 100px;
+    wrap: nowrap;
     transition: all .3s ease-in;
     z-index: 20;
 }
