--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -44,10 +44,11 @@
     }
 
     &:checked~.carro-abrir .c-hijo {
-        animation: verSlide .7s;
+        animation: verSlide .85s;
     }
 
     &:not(:checked)~.carro-abrir .c-hijo {
+        height: 100%;
         display: none;
     }
 }
@@ -59,8 +60,6 @@
     width: 0px;
     height: 100%;
     background: var(--color);
-    height: 100px;
-    wrap: nowrap;
     transition: all .3s ease-in;
     z-index: 20;
 }
@@ -70,6 +69,16 @@
     /* width: 100%; */
     /* height: 10%; */
     /* background-color: aqua; */
+    text-wrap: nowrap;
+}
+
+.c-footer {
+    display: none;
+}
+
+.c-hijo {
+    display: flex;
+    flex-direction: column;
 }
 
 @keyframes verSlide {
