--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -44,7 +44,7 @@
     }
 
     &:checked~.carro-abrir .c-hijo {
-        animation: verSlide .85s;
+        animation: verSlide .7s;
     }
 
     &:not(:checked)~.carro-abrir .c-hijo {
@@ -60,7 +60,7 @@
     width: 0px;
     height: 100%;
     background: var(--color);
-    transition: all .3s ease-in;
+    transition: all .3s ease-in-out;
     z-index: 20;
 }
 
@@ -68,7 +68,6 @@
 .carro-abrir .c-padre {
     /* width: 100%; */
     /* height: 10%; */
-    /* background-color: aqua; */
 }
 
 .c-hijo {
