--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -71,8 +71,16 @@
 }
 
 .c-hijo {
+    margin: 30px 20px;
     display: flex;
+    gap: 20px;
     flex-direction: column;
+    background: var(--bg);
+}
+
+.c-encabezado {
+    display: flex;
+    justify-content: space-between;
 }
 
 @keyframes verSlide {
