--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -1,6 +1,6 @@
 .navbar-item.carro {
-    height: 130%;
-    width: 35%;
+    height: 45px;
+    width: 65px;
     grid-row: 2/3;
     grid-column: 6/7;
     border: 1px solid var(--color);
@@ -10,14 +10,16 @@
 /* label contenedor carro */
 .navbar-item .a-item.🛒 {
     display: flex;
-    flex-direction: row-reverse;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     height: 100%;
     width: 100%;
+    padding-right: 15px;
+    border-radius: 40px;
     background: url(../../public/svg/cart.svg) no-repeat 15% 60%;
     background-size: 50% 60%;
     font-family: var(--f-normal);
+    -webkit-transform: rotateY(0deg);
     transform: rotateY(0deg);
     z-index: 10;
 
@@ -26,6 +28,9 @@
     }
 }
 
+/* .txt-item{
+ponerle la poscicion para el lado del carrito.
+} */
 /* quita el on de la navegation. */
 .navbar-item .a-item.🛒:hover::after {
     z-index: 10;
@@ -40,15 +45,15 @@
     &:checked~.carro-abrir {
         width: 30%;
         height: 100%;
-        transition: all .6s ease-in;
+        transition: all .67s ease-in;
     }
 
     &:checked~.carro-abrir .c-hijo {
-        animation: verSlide .7s;
+        animation: verSlide .65s;
     }
 
-    &:not(:checked)~.carro-abrir .c-hijo {
-        height: 100%;
+    &:not(:checked)~.carro-abrir .c-padre .c-hijo {
+        /* animation: verSlide 1s rev; */
         display: none;
     }
 }
@@ -66,13 +71,15 @@
 
 
 .carro-abrir .c-padre {
+    /* display: none; */
     /* width: 100%; */
     /* height: 10%; */
 }
 
 .c-hijo {
-    margin: 30px 20px;
     display: flex;
+    height: 100%;
+    margin: 30px 20px;
     gap: 20px;
     flex-direction: column;
     background: var(--bg);
@@ -85,8 +92,9 @@
 
 @keyframes verSlide {
 
+
     0%,
-    60% {
+    80% {
         display: none;
     }
 
