--- a/src/css/busqueda.css
+++ b/src/css/busqueda.css
@@ -1,36 +1,44 @@
+/* @page {
+    background-color: blue;
+} */
+
 .navbar-item.busqueda {
     z-index: 10;
     grid-row: 1/2;
     grid-column: 2/5;
     height: 100%;
-    width: 100%;
+    width: 50%;
+
 }
 
 form {
-    box-sizing: content-box;
+    display: flex;
     height: 100%;
-    width: 50%;
-}
-
-.lb-busqueda {
-    height: 100%;
-    width: 100%;
+    min-width: 100%;
     border: 1px solid var(--color);
     border-radius: 20px 20px;
     padding: 5px 5px 5px 10px;
+}
+
+.lb-busqueda {
+    position: relative;
+    height: 100%;
+    width: 100%;
     display: flex;
+    justify-content: space-between;
 }
 
 
 /* arreglar auto ajuste de la input. */
 .i-txt {
     height: 100%;
-    width: 120%;
-    text-align: center;
+    width: 100%;
     background-color: transparent;
-    border: 0;
+    text-align: center;
     font-family: var(--f-normal);
     font-size: 16px;
+    border: 0;
+
 
     &::selection,
     &:focus,
@@ -43,20 +51,13 @@ form {
         font-size: 16px;
     }
 
-    &::before {
-        content: "...";
-        position: relative;
-        width: 100px;
-        height: 100px;
-        background: #ccc;
-    }
+
 }
 
 
 
 .btn-label-txt {
-    display: inline-block;
-    width: 15%;
+    width: 17%;
     height: 100%;
     background: url(../../public/svg/lupa.png) no-repeat 0 2px;
     background-size: 80% 80%;
@@ -67,23 +68,18 @@ form {
     }
 }
 
-@media (width <=930px) {
+@media (width <=985px) {
+
+
     .i-txt {
-
-
-
-        &::placeholder {
-            font-size: 14px;
-            width: 105%;
+        &::after {
+            content: "a";
+            width: 100px;
+            height: 100px;
+            position: absolute;
+            background-color: aqua;
+            visibility: visible;
         }
 
-
-    }
-
-    .btn-label-txt {
-        width: 22%;
-        /* flex: 1 1 20%;
-        background-size: 40% 60%;
-        background-position: 15px 7px; */
     }
 }
