--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -45,15 +45,14 @@ ponerle la poscicion para el lado del carrito.
     &:checked~.carro-abrir {
         width: 30%;
         height: 100%;
-        transition: all .67s ease-in;
+        transition: all .55s ease-in;
     }
 
     &:checked~.carro-abrir .c-hijo {
-        animation: verSlide .65s;
+        animation: verSlide .61s;
     }
 
     &:not(:checked)~.carro-abrir .c-padre .c-hijo {
-        /* animation: verSlide 1s rev; */
         display: none;
     }
 }
@@ -65,16 +64,12 @@ ponerle la poscicion para el lado del carrito.
     width: 0px;
     height: 100%;
     background: var(--color);
-    transition: all .3s ease-in-out;
+    transition: all .20s ease-in-out;
     z-index: 20;
 }
 
 
-.carro-abrir .c-padre {
-    /* display: none; */
-    /* width: 100%; */
-    /* height: 10%; */
-}
+.carro-abrir .c-padre {}
 
 .c-hijo {
     display: flex;
