--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -97,3 +97,9 @@ ponerle la poscicion para el lado del carrito.
         display: flex;
     }
 }
+
+@media (width <=750px) {
+    .navbar-item.carro {
+        grid-column: 5/6;
+    }
+}
